--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Booking History";
 }
 
-<!-- Including Bootstrap for styling -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -30,9 +29,9 @@
         {
             <tr>
                 <td>
-                    @if (item.Worker != null)
+                    @if (item.Worker != null && item.Worker.User != null)
                     {
-                        @Html.DisplayFor(modelItem => item.Worker.User.Firstname) @Html.DisplayFor(modelItem => item.Worker.User.Lastname)
+                        <span>@item.Worker.User.Firstname @item.Worker.User.Lastname</span>
                     }
                     else
                     {
@@ -66,7 +65,7 @@
                 <td>
                     @if (item.Service != null)
                     {
-                        @Html.DisplayFor(modelItem => item.Service.Service_Id)
+                        @Html.DisplayFor(modelItem => item.Service.Name)
                     }
                     else
                     {
