--- a/Views/Workers/Create.cshtml
+++ b/Views/Workers/Create.cshtml
@@ -17,7 +17,7 @@
 
 
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -32,9 +32,14 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="ProfilePic_Id" class="control-label">Profile Picture:</label>
-                <input asp-for="ProfilePic_Id" class="form-control" />
+                <label class="control-label">Profile Picture:</label>
+                <input type="file" name="ProfilePic_Id" class="form-control" accept="image/*" onchange="previewImage(event)" />
                 <span asp-validation-for="ProfilePic_Id" class="text-danger"></span>
+
+               
+                <div class="mt-3">
+                    <img id="profilePicPreview" class="img-thumbnail" width="150" style="display:none;" />
+                </div>
             </div>
           
            
@@ -68,6 +73,19 @@
                 maximumSelectionLength: 5
             });
         });
+        function previewImage(event) {
+            const input = event.target;
+            const preview = document.getElementById('profilePicPreview');
+
+            if (input.files && input.files[0]) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    preview.src = e.target.result;
+                    preview.style.display = 'block'; // Show the preview image
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
     </script>
 }
 
