--- a/Views/Workers/Create.cshtml
+++ b/Views/Workers/Create.cshtml
@@ -33,7 +33,7 @@
 
             <div class="form-group">
                 <label class="control-label">Profile Picture:</label>
-                <input type="file" name="ProfilePic_Id" class="form-control" accept="image/*" onchange="previewImage(event)" />
+                <input type="file" name="ProfilePicFile" class="form-control" accept="image/*" onchange="previewImage(event)" />
                 <span asp-validation-for="ProfilePic_Id" class="text-danger"></span>
 
                
