--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -78,7 +78,7 @@
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
                     <a asp-controller="Review" asp-action="Create"
                        asp-route-workerId="@item.Worker_Id"
-                       asp-route-erviceId="@item.Service_Id"
+                       asp-route-serviceId="@item.Service_Id"
                        asp-route-userId="@item.UserId"
                        class="btn btn-sm btn-primary mt-2">Write a Review</a>
 
