updated invoice UI

--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -81,6 +81,7 @@
                        asp-route-serviceId="@item.Service_Id"
                        asp-route-userId="@item.UserId"
                        class="btn btn-sm btn-primary mt-2">Write a Review</a>
+                    <a asp-action="DownloadInvoice" asp-route-id="@item.Id" class="btn btn-sm btn-primary mt-2">Invoice</a>
 
 
                 </td>
