--- a/Views/Workers/Details.cshtml
+++ b/Views/Workers/Details.cshtml
@@ -42,30 +42,39 @@
     }
 </div>
 
-<!-- Pagination Controls -->
-<div>
-    <nav aria-label="Review navigation">
-        <ul class="pagination">
-            <li class="page-item @(ViewBag.CurrentPage <= 1 ? "disabled" : "")">
-                <a class="page-link" asp-action="Details"
-                   asp-route-workerId="@Model.Worker_Id"
-                   asp-route-serviceId="@ViewBag.ServiceId"
-                   asp-route-page="@(ViewBag.CurrentPage - 1)">
-                    Previous
-                </a>
-            </li>
-            <li class="page-item @(ViewBag.CurrentPage >= ViewBag.TotalPages ? "disabled" : "")">
-                <a class="page-link" asp-action="Details"
-                   asp-route-workerId="@Model.Worker_Id"
-                   asp-route-serviceId="@ViewBag.ServiceId"
-                   asp-route-page="@(ViewBag.CurrentPage + 1)">
-                    Next
-                </a>
-            </li>
-        </ul>
-    </nav>
 
-</div>
+
+<nav aria-label="Review navigation">
+    <ul class="pagination">
+        <!-- Previous Button -->
+        <li class="page-item @(ViewBag.CurrentPage <= 1 ? "disabled" : "")">
+            <a class="page-link"
+               asp-action="Details"
+               asp-route-workerId="@Model.Worker_Id"
+               asp-route-serviceId="@ViewBag.ServiceId"
+               asp-route-page="@(ViewBag.CurrentPage - 1)">
+                Previous
+            </a>
+        </li>
+
+        <!-- Next Button -->
+        <li class="page-item @(ViewBag.CurrentPage >= ViewBag.TotalPages ? "disabled" : "")">
+            <a class="page-link"
+               asp-action="Details"
+               asp-route-workerId="@Model.Worker_Id"
+               asp-route-serviceId="@ViewBag.ServiceId"
+               asp-route-page="@(ViewBag.CurrentPage + 1)">
+                Next
+            </a>
+        </li>
+    </ul>
+</nav>
+
+
+
+
+
+
 
 <!-- Back to Workers List -->
 <div>
