--- a/Views/Workers/Index.cshtml
+++ b/Views/Workers/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <div class="container">
-    <!-- Sorting links -->
+    <!-- Sorting links --
     <div>
         <strong>Sort by:</strong>
         <a asp-action="Index" asp-route-serviceId="@ViewData["ServiceId"]" asp-route-sortOrder="@ViewData["PriceSortParam"]">Price</a> |
