--- a/Views/Workers/Details.cshtml
+++ b/Views/Workers/Details.cshtml
@@ -8,6 +8,11 @@
             <img src="@Model.ProfilePicUrl" alt="Profile Image" style="max-width: 200px;" />
         </dd>
 
+        <dt class="col-sm-2">Name</dt>
+        <dd class="col-sm-10">
+            @Model.FirstName @Model.LastName
+        </dd>
+
         <dt class="col-sm-2">Price</dt>
         <dd class="col-sm-10">
             @Model.Price
